best_try_and_best_chance

--- a/192/index.html
+++ b/192/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-04-16 -->
+<!-- 2024-04-17 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>192</title>
@@ -939,7 +939,7 @@ C/S架构编程，做完第一章所有的上机题:
 <section id="outline-container-org366482f" class="outline-2">
 <h2 id="org366482f"><span class="section-number-2">2.</span> 任务结果</h2>
 <div class="outline-text-2" id="text-2">
-<table id="orgfde0603">
+<table id="org17e9bdf">
 
 
 <colgroup>
@@ -1027,7 +1027,7 @@ C/S架构编程，做完第一章所有的上机题:
 <td class="org-right">5</td>
 <td class="org-left">黄可彬</td>
 <td class="org-right">10</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">4</td>
 </tr>
 
 <tr>
@@ -1250,7 +1250,7 @@ C/S架构编程，做完第一章所有的上机题:
 <tr>
 <td class="org-right">4</td>
 <td class="org-left">何晓东</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">42</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 </tbody>
@@ -1259,7 +1259,7 @@ C/S架构编程，做完第一章所有的上机题:
 
 <details><summary>history score</summary>
 
-<table id="org17e9bdf">
+<table id="orgd6e9b12">
 
 
 <colgroup>
@@ -1925,7 +1925,7 @@ Console.<span style="color: #721045;">WriteLine</span><span style="color: #00000
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 31415929</p>
-<p class="date">Created: 2024-04-16</p>
+<p class="date">Created: 2024-04-17</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
