best_try_and_best_chance

--- a/192/index.html
+++ b/192/index.html
@@ -939,7 +939,7 @@ C/S架构编程，做完第一章所有的上机题:
 <section id="outline-container-org366482f" class="outline-2">
 <h2 id="org366482f"><span class="section-number-2">2.</span> 任务结果</h2>
 <div class="outline-text-2" id="text-2">
-<table id="org17e9bdf">
+<table id="orgd6e9b12">
 
 
 <colgroup>
@@ -968,6 +968,13 @@ C/S架构编程，做完第一章所有的上机题:
 </tr>
 
 <tr>
+<td class="org-right">3</td>
+<td class="org-left">段文潇</td>
+<td class="org-right">8</td>
+<td class="org-right">2</td>
+</tr>
+
+<tr>
 <td class="org-right">5</td>
 <td class="org-left">许焕圣</td>
 <td class="org-right">2</td>
@@ -976,9 +983,23 @@ C/S架构编程，做完第一章所有的上机题:
 
 <tr>
 <td class="org-right">5</td>
+<td class="org-left">黄可彬</td>
+<td class="org-right">10</td>
+<td class="org-right">4</td>
+</tr>
+
+<tr>
+<td class="org-right">2</td>
+<td class="org-left">高旻昱</td>
+<td class="org-right">6</td>
+<td class="org-right">5</td>
+</tr>
+
+<tr>
+<td class="org-right">5</td>
 <td class="org-left">何华为</td>
 <td class="org-right">3</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">6</td>
 </tr>
 
 <tr>
@@ -996,13 +1017,6 @@ C/S架构编程，做完第一章所有的上机题:
 </tr>
 
 <tr>
-<td class="org-right">2</td>
-<td class="org-left">高旻昱</td>
-<td class="org-right">6</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
 <td class="org-right">3</td>
 <td class="org-left">刘广鸿</td>
 <td class="org-right">7</td>
@@ -1010,24 +1024,10 @@ C/S架构编程，做完第一章所有的上机题:
 </tr>
 
 <tr>
-<td class="org-right">3</td>
-<td class="org-left">段文潇</td>
-<td class="org-right">8</td>
-<td class="org-right">2</td>
-</tr>
-
-<tr>
 <td class="org-right">4</td>
 <td class="org-left">贝俊霖</td>
 <td class="org-right">9</td>
 <td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">5</td>
-<td class="org-left">黄可彬</td>
-<td class="org-right">10</td>
-<td class="org-right">4</td>
 </tr>
 
 <tr>
@@ -1259,7 +1259,7 @@ C/S架构编程，做完第一章所有的上机题:
 
 <details><summary>history score</summary>
 
-<table id="orgd6e9b12">
+<table id="org6b72643">
 
 
 <colgroup>
