--- a/190/index.html
+++ b/190/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-04-16 -->
+<!-- 2024-04-17 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>190</title>
@@ -75,7 +75,7 @@
 </p>
 
 
-<figure id="orgd42b7f0">
+<figure id="orgbe2a89b">
 <img src="img/oimg_20240410_103855.png" alt="oimg_20240410_103855.png">
 
 </figure>
@@ -451,7 +451,7 @@
 </p>
 
 
-<figure id="org4665546">
+<figure id="orgb7b7ae6">
 <img src="img/oimg_20240311_150853.png" alt="oimg_20240311_150853.png">
 
 </figure>
@@ -1071,7 +1071,7 @@ Winform 项目，VS 界面:
 <section id="outline-container-orga1a6079" class="outline-2">
 <h2 id="orga1a6079"><span class="section-number-2">2.</span> 任务结果</h2>
 <div class="outline-text-2" id="text-2">
-<table id="org640ac8a">
+<table id="org85b7954">
 
 
 <colgroup>
@@ -1108,7 +1108,7 @@ Winform 项目，VS 界面:
 <td class="org-left">吴淑豪</td>
 <td class="org-right">1</td>
 <td class="org-right">2</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">2</td>
 </tr>
 
 <tr>
@@ -1494,7 +1494,7 @@ Winform 项目，VS 界面:
 
 
 <details><summary>history scores</summary>
-<table id="org85b7954">
+<table id="org5188704">
 
 
 <colgroup>
@@ -1917,7 +1917,7 @@ Winform 项目，VS 界面:
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 31415929</p>
-<p class="date">Created: 2024-04-16</p>
+<p class="date">Created: 2024-04-17</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
