best_try_and_best_chance

--- a/190/index.html
+++ b/190/index.html
@@ -75,7 +75,7 @@
 </p>
 
 
-<figure id="org0c67b71">
+<figure id="org4225677">
 <img src="img/oimg_20240410_103855.png" alt="oimg_20240410_103855.png">
 
 </figure>
@@ -451,7 +451,7 @@
 </p>
 
 
-<figure id="org9bce902">
+<figure id="org7f54846">
 <img src="img/oimg_20240311_150853.png" alt="oimg_20240311_150853.png">
 
 </figure>
@@ -1071,7 +1071,7 @@ Winform 项目，VS 界面:
 <section id="outline-container-orga1a6079" class="outline-2">
 <h2 id="orga1a6079"><span class="section-number-2">2.</span> 任务结果</h2>
 <div class="outline-text-2" id="text-2">
-<table id="org5188704">
+<table id="org6ea79de">
 
 
 <colgroup>
@@ -1132,7 +1132,7 @@ Winform 项目，VS 界面:
 <td class="org-left">杨富</td>
 <td class="org-right">&#xa0;</td>
 <td class="org-right">5</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">5</td>
 </tr>
 
 <tr>
@@ -1156,7 +1156,7 @@ Winform 项目，VS 界面:
 <td class="org-left">邓义柏</td>
 <td class="org-right">&#xa0;</td>
 <td class="org-right">8</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">4</td>
 </tr>
 
 <tr>
@@ -1196,7 +1196,7 @@ Winform 项目，VS 界面:
 <td class="org-left">甘成杰</td>
 <td class="org-right">7</td>
 <td class="org-right">13</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">3</td>
 </tr>
 
 <tr>
@@ -1228,7 +1228,7 @@ Winform 项目，VS 界面:
 <td class="org-left">曾翔</td>
 <td class="org-right">6</td>
 <td class="org-right">17</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">6</td>
 </tr>
 
 <tr>
@@ -1424,6 +1424,14 @@ Winform 项目，VS 界面:
 </tr>
 
 <tr>
+<td class="org-right">4</td>
+<td class="org-left">罗秀洋</td>
+<td class="org-right">&#xa0;</td>
+<td class="org-right">42</td>
+<td class="org-right">&#xa0;</td>
+</tr>
+
+<tr>
 <td class="org-right">5</td>
 <td class="org-left">王艺楠</td>
 <td class="org-right">&#xa0;</td>
@@ -1450,14 +1458,6 @@ Winform 项目，VS 界面:
 <tr>
 <td class="org-right">2</td>
 <td class="org-left">林显诚</td>
-<td class="org-right">&#xa0;</td>
-<td class="org-right">&#xa0;</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">4</td>
-<td class="org-left">罗秀洋</td>
 <td class="org-right">&#xa0;</td>
 <td class="org-right">&#xa0;</td>
 <td class="org-right">&#xa0;</td>
@@ -1494,7 +1494,7 @@ Winform 项目，VS 界面:
 
 
 <details><summary>history scores</summary>
-<table id="org6ea79de">
+<table id="org6800809">
 
 
 <colgroup>
