best_try_and_best_chance

--- a/190/index.html
+++ b/190/index.html
@@ -75,7 +75,7 @@
 </p>
 
 
-<figure id="org4225677">
+<figure id="orgb464204">
 <img src="img/oimg_20240410_103855.png" alt="oimg_20240410_103855.png">
 
 </figure>
@@ -451,7 +451,7 @@
 </p>
 
 
-<figure id="org7f54846">
+<figure id="org0ec7db3">
 <img src="img/oimg_20240311_150853.png" alt="oimg_20240311_150853.png">
 
 </figure>
@@ -1071,7 +1071,7 @@ Winform 项目，VS 界面:
 <section id="outline-container-orga1a6079" class="outline-2">
 <h2 id="orga1a6079"><span class="section-number-2">2.</span> 任务结果</h2>
 <div class="outline-text-2" id="text-2">
-<table id="org6ea79de">
+<table id="org6800809">
 
 
 <colgroup>
@@ -1124,7 +1124,7 @@ Winform 项目，VS 界面:
 <td class="org-left">官名福</td>
 <td class="org-right">5</td>
 <td class="org-right">4</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">8</td>
 </tr>
 
 <tr>
@@ -1188,7 +1188,7 @@ Winform 项目，VS 界面:
 <td class="org-left">梁炽勇</td>
 <td class="org-right">10</td>
 <td class="org-right">12</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">7</td>
 </tr>
 
 <tr>
@@ -1332,7 +1332,7 @@ Winform 项目，VS 界面:
 <td class="org-left">刘鹏</td>
 <td class="org-right">9</td>
 <td class="org-right">30</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">9</td>
 </tr>
 
 <tr>
@@ -1432,26 +1432,18 @@ Winform 项目，VS 界面:
 </tr>
 
 <tr>
-<td class="org-right">5</td>
-<td class="org-left">王艺楠</td>
-<td class="org-right">&#xa0;</td>
-<td class="org-right">&#xa0;</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">4</td>
-<td class="org-left">李进斌</td>
-<td class="org-right">&#xa0;</td>
-<td class="org-right">&#xa0;</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
 <td class="org-right">2</td>
 <td class="org-left">杜喆</td>
 <td class="org-right">&#xa0;</td>
+<td class="org-right">43</td>
 <td class="org-right">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-right">5</td>
+<td class="org-left">王艺楠</td>
+<td class="org-right">&#xa0;</td>
+<td class="org-right">44</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
@@ -1459,7 +1451,15 @@ Winform 项目，VS 界面:
 <td class="org-right">2</td>
 <td class="org-left">林显诚</td>
 <td class="org-right">&#xa0;</td>
+<td class="org-right">45</td>
 <td class="org-right">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-right">4</td>
+<td class="org-left">李进斌</td>
+<td class="org-right">&#xa0;</td>
+<td class="org-right">46</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
@@ -1494,7 +1494,7 @@ Winform 项目，VS 界面:
 
 
 <details><summary>history scores</summary>
-<table id="org6800809">
+<table id="orgf028b2e">
 
 
 <colgroup>
