best_try_and_best_chance

--- a/190/index.html
+++ b/190/index.html
@@ -93,6 +93,13 @@
 <span class="linenr">28: </span><span style="color: #000000;">}</span>
 </pre>
 </div>
+
+<p>
+可以优化的地方:
+</p>
+<ul class="org-ul">
+<li>处理用户不正常的输入 (异常处理)</li>
+</ul>
 </div>
 </div>
 
@@ -117,7 +124,7 @@
 </p>
 
 
-<figure id="org178b48b">
+<figure id="org7a4bc51">
 <img src="img/oimg_20240410_103855.png" alt="oimg_20240410_103855.png">
 
 </figure>
@@ -493,7 +500,7 @@
 </p>
 
 
-<figure id="orge13f905">
+<figure id="orgca482d6">
 <img src="img/oimg_20240311_150853.png" alt="oimg_20240311_150853.png">
 
 </figure>
@@ -1113,7 +1120,7 @@ Winform 项目，VS 界面:
 <section id="outline-container-orga1a6079" class="outline-2">
 <h2 id="orga1a6079"><span class="section-number-2">2.</span> 任务结果</h2>
 <div class="outline-text-2" id="text-2">
-<table id="orgf028b2e">
+<table id="org92e246d">
 
 
 <colgroup>
@@ -1536,7 +1543,7 @@ Winform 项目，VS 界面:
 
 
 <details><summary>history scores</summary>
-<table id="org92e246d">
+<table id="org9126b88">
 
 
 <colgroup>
