--- a/190/index.html
+++ b/190/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-04-22 -->
+<!-- 2024-04-23 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>190</title>
@@ -20,29 +20,29 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org14957c5">1. 笔记</a>
+<li><a href="#org0d27607">1. 笔记</a>
 <ul>
-<li><a href="#org8a2f42a">1.1. 2024-04-22 09:51:08</a></li>
-<li><a href="#orgb55aec3">1.2. 2024-04-22 09:05:41</a></li>
-<li><a href="#org74344e3">1.3. 2024-04-15 09:58:59</a></li>
-<li><a href="#org4a83b52">1.4. 2024-04-10 10:34:21</a></li>
-<li><a href="#org0c20197">1.5. 2024-04-08 08:44:08</a></li>
-<li><a href="#org4963414">1.6. 2024-04-03 10:34:53</a></li>
-<li><a href="#orgc0f7781">1.7. 2024-04-01 09:01:09</a></li>
-<li><a href="#orga282cb6">1.8. 2024-03-27 10:33:05</a></li>
-<li><a href="#orge5308c9">1.9. 2024-03-25 14:58:22</a></li>
-<li><a href="#orgf1ae66e">1.10. 2024-03-18 09:55:03</a></li>
-<li><a href="#orgb435766">1.11. 2024-03-13 11:01:46</a></li>
-<li><a href="#org8cbbc25">1.12. 2024-03-11 14:52:05</a></li>
-<li><a href="#org484b6e1">1.13. 2024-03-11 08:30:00</a></li>
-<li><a href="#org8452469">1.14. 2024-01-15 (寒假作业)</a></li>
-<li><a href="#org82189a0">1.15. 2024-01-15 (期末成绩)</a></li>
-<li><a href="#org9e9b6ae">1.16. 2023-12-28 (任务)</a></li>
-<li><a href="#org0a2cf87">1.17. 2023-10-30 (任务)</a></li>
-<li><a href="#orgf5f6210">1.18. 2023-09-07 (任务)</a></li>
+<li><a href="#orgc844abb">1.1. 2024-04-22 09:51:08</a></li>
+<li><a href="#org39312d7">1.2. 2024-04-22 09:05:41</a></li>
+<li><a href="#org4ad04c4">1.3. 2024-04-15 09:58:59</a></li>
+<li><a href="#org253369b">1.4. 2024-04-10 10:34:21</a></li>
+<li><a href="#org4c837a6">1.5. 2024-04-08 08:44:08</a></li>
+<li><a href="#orgdd8fe66">1.6. 2024-04-03 10:34:53</a></li>
+<li><a href="#org2f0ece7">1.7. 2024-04-01 09:01:09</a></li>
+<li><a href="#orgd2bc79b">1.8. 2024-03-27 10:33:05</a></li>
+<li><a href="#org8af7a47">1.9. 2024-03-25 14:58:22</a></li>
+<li><a href="#org3edc6ff">1.10. 2024-03-18 09:55:03</a></li>
+<li><a href="#org74e78df">1.11. 2024-03-13 11:01:46</a></li>
+<li><a href="#orgd6878c2">1.12. 2024-03-11 14:52:05</a></li>
+<li><a href="#org5055d57">1.13. 2024-03-11 08:30:00</a></li>
+<li><a href="#orga55a7ea">1.14. 2024-01-15 (寒假作业)</a></li>
+<li><a href="#org9c54ffe">1.15. 2024-01-15 (期末成绩)</a></li>
+<li><a href="#org4df153d">1.16. 2023-12-28 (任务)</a></li>
+<li><a href="#orgeb32b7e">1.17. 2023-10-30 (任务)</a></li>
+<li><a href="#org7a31677">1.18. 2023-09-07 (任务)</a></li>
 </ul>
 </li>
-<li><a href="#orga1a6079">2. 任务结果</a></li>
+<li><a href="#org86b49eb">2. 任务结果</a></li>
 </ul>
 </div>
 </nav>
@@ -52,12 +52,12 @@
 </ul>
 
 
-<section id="outline-container-org14957c5" class="outline-2">
-<h2 id="org14957c5"><span class="section-number-2">1.</span> 笔记</h2>
+<section id="outline-container-org0d27607" class="outline-2">
+<h2 id="org0d27607"><span class="section-number-2">1.</span> 笔记</h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-org8a2f42a" class="outline-3">
-<h3 id="org8a2f42a"><span class="section-number-3">1.1.</span> 2024-04-22 09:51:08</h3>
+<div id="outline-container-orgc844abb" class="outline-3">
+<h3 id="orgc844abb"><span class="section-number-3">1.1.</span> 2024-04-22 09:51:08</h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 猜数字的参考代码:
@@ -132,8 +132,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgb55aec3" class="outline-3">
-<h3 id="orgb55aec3"><span class="section-number-3">1.2.</span> 2024-04-22 09:05:41</h3>
+<div id="outline-container-org39312d7" class="outline-3">
+<h3 id="org39312d7"><span class="section-number-3">1.2.</span> 2024-04-22 09:05:41</h3>
 <div class="outline-text-3" id="text-1-2">
 <p>
 温度转换参考代码:
@@ -180,8 +180,8 @@
 </div>
 </div>
 
-<div id="outline-container-org74344e3" class="outline-3">
-<h3 id="org74344e3"><span class="section-number-3">1.3.</span> 2024-04-15 09:58:59</h3>
+<div id="outline-container-org4ad04c4" class="outline-3">
+<h3 id="org4ad04c4"><span class="section-number-3">1.3.</span> 2024-04-15 09:58:59</h3>
 <div class="outline-text-3" id="text-1-3">
 <p>
 实现课本上的猜数字的游戏。21 页
@@ -189,8 +189,8 @@
 </div>
 </div>
 
-<div id="outline-container-org4a83b52" class="outline-3">
-<h3 id="org4a83b52"><span class="section-number-3">1.4.</span> 2024-04-10 10:34:21</h3>
+<div id="outline-container-org253369b" class="outline-3">
+<h3 id="org253369b"><span class="section-number-3">1.4.</span> 2024-04-10 10:34:21</h3>
 <div class="outline-text-3" id="text-1-4">
 <p>
 实现一个温度转换程序。要求能够将华氏温度转换为摄氏温度。
@@ -201,7 +201,7 @@
 </p>
 
 
-<figure id="org8bb232f">
+<figure id="org1333b56">
 <img src="img/oimg_20240410_103855.png" alt="oimg_20240410_103855.png">
 
 </figure>
@@ -209,8 +209,8 @@
 </div>
 
 
-<div id="outline-container-org0c20197" class="outline-3">
-<h3 id="org0c20197"><span class="section-number-3">1.5.</span> 2024-04-08 08:44:08</h3>
+<div id="outline-container-org4c837a6" class="outline-3">
+<h3 id="org4c837a6"><span class="section-number-3">1.5.</span> 2024-04-08 08:44:08</h3>
 <div class="outline-text-3" id="text-1-5">
 <p>
 另一个定时器的例子，倒计时:
@@ -251,8 +251,8 @@
 </div>
 </div>
 
-<div id="outline-container-org4963414" class="outline-3">
-<h3 id="org4963414"><span class="section-number-3">1.6.</span> 2024-04-03 10:34:53</h3>
+<div id="outline-container-orgdd8fe66" class="outline-3">
+<h3 id="orgdd8fe66"><span class="section-number-3">1.6.</span> 2024-04-03 10:34:53</h3>
 <div class="outline-text-3" id="text-1-6">
 <p>
 小测验:
@@ -273,8 +273,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgc0f7781" class="outline-3">
-<h3 id="orgc0f7781"><span class="section-number-3">1.7.</span> 2024-04-01 09:01:09</h3>
+<div id="outline-container-org2f0ece7" class="outline-3">
+<h3 id="org2f0ece7"><span class="section-number-3">1.7.</span> 2024-04-01 09:01:09</h3>
 <div class="outline-text-3" id="text-1-7">
 <p>
 时钟程序实例:
@@ -298,8 +298,8 @@
 </div>
 </div>
 
-<div id="outline-container-orga282cb6" class="outline-3">
-<h3 id="orga282cb6"><span class="section-number-3">1.8.</span> 2024-03-27 10:33:05</h3>
+<div id="outline-container-orgd2bc79b" class="outline-3">
+<h3 id="orgd2bc79b"><span class="section-number-3">1.8.</span> 2024-03-27 10:33:05</h3>
 <div class="outline-text-3" id="text-1-8">
 <p>
 一个窗体中有很多图形元素，这些称为控件 (Control)。
@@ -371,8 +371,8 @@
 </div>
 </div>
 
-<div id="outline-container-orge5308c9" class="outline-3">
-<h3 id="orge5308c9"><span class="section-number-3">1.9.</span> 2024-03-25 14:58:22</h3>
+<div id="outline-container-org8af7a47" class="outline-3">
+<h3 id="org8af7a47"><span class="section-number-3">1.9.</span> 2024-03-25 14:58:22</h3>
 <div class="outline-text-3" id="text-1-9">
 <p>
 课本第 5 页，事件。
@@ -459,8 +459,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgf1ae66e" class="outline-3">
-<h3 id="orgf1ae66e"><span class="section-number-3">1.10.</span> 2024-03-18 09:55:03</h3>
+<div id="outline-container-org3edc6ff" class="outline-3">
+<h3 id="org3edc6ff"><span class="section-number-3">1.10.</span> 2024-03-18 09:55:03</h3>
 <div class="outline-text-3" id="text-1-10">
 <p>
 接下来进行练习:
@@ -487,8 +487,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgb435766" class="outline-3">
-<h3 id="orgb435766"><span class="section-number-3">1.11.</span> 2024-03-13 11:01:46</h3>
+<div id="outline-container-org74e78df" class="outline-3">
+<h3 id="org74e78df"><span class="section-number-3">1.11.</span> 2024-03-13 11:01:46</h3>
 <div class="outline-text-3" id="text-1-11">
 <p>
 为 BMI 计算器增加身体状况的判断和显示。
@@ -533,8 +533,8 @@
 </div>
 </div>
 
-<div id="outline-container-org8cbbc25" class="outline-3">
-<h3 id="org8cbbc25"><span class="section-number-3">1.12.</span> 2024-03-11 14:52:05</h3>
+<div id="outline-container-orgd6878c2" class="outline-3">
+<h3 id="orgd6878c2"><span class="section-number-3">1.12.</span> 2024-03-11 14:52:05</h3>
 <div class="outline-text-3" id="text-1-12">
 <p>
 请大家保持安静，谢谢合作。
@@ -577,7 +577,7 @@
 </p>
 
 
-<figure id="org83dd811">
+<figure id="orgab06b82">
 <img src="img/oimg_20240311_150853.png" alt="oimg_20240311_150853.png">
 
 </figure>
@@ -600,8 +600,8 @@
 </div>
 </div>
 
-<div id="outline-container-org484b6e1" class="outline-3">
-<h3 id="org484b6e1"><span class="section-number-3">1.13.</span> 2024-03-11 08:30:00</h3>
+<div id="outline-container-org5055d57" class="outline-3">
+<h3 id="org5055d57"><span class="section-number-3">1.13.</span> 2024-03-11 08:30:00</h3>
 <div class="outline-text-3" id="text-1-13">
 <p>
 Winform 项目，VS 界面:
@@ -659,8 +659,8 @@ Winform 项目，VS 界面:
 </div>
 </div>
 
-<div id="outline-container-org8452469" class="outline-3">
-<h3 id="org8452469"><span class="section-number-3">1.14.</span> 2024-01-15 (寒假作业)</h3>
+<div id="outline-container-orga55a7ea" class="outline-3">
+<h3 id="orga55a7ea"><span class="section-number-3">1.14.</span> 2024-01-15 (寒假作业)</h3>
 <div class="outline-text-3" id="text-1-14">
 <p>
 做一个求取 BMI 的控制台应用:
@@ -687,8 +687,8 @@ Winform 项目，VS 界面:
 
 
 
-<div id="outline-container-org82189a0" class="outline-3">
-<h3 id="org82189a0"><span class="section-number-3">1.15.</span> 2024-01-15 (期末成绩)</h3>
+<div id="outline-container-org9c54ffe" class="outline-3">
+<h3 id="org9c54ffe"><span class="section-number-3">1.15.</span> 2024-01-15 (期末成绩)</h3>
 <div class="outline-text-3" id="text-1-15">
 <table>
 
@@ -1162,8 +1162,8 @@ Winform 项目，VS 界面:
 </div>
 </div>
 
-<div id="outline-container-org9e9b6ae" class="outline-3">
-<h3 id="org9e9b6ae"><span class="section-number-3">1.16.</span> 2023-12-28 (任务)</h3>
+<div id="outline-container-org4df153d" class="outline-3">
+<h3 id="org4df153d"><span class="section-number-3">1.16.</span> 2023-12-28 (任务)</h3>
 <div class="outline-text-3" id="text-1-16">
 <p>
 使用控制台实现点名的功能。
@@ -1175,8 +1175,8 @@ Winform 项目，VS 界面:
 </div>
 </div>
 
-<div id="outline-container-org0a2cf87" class="outline-3">
-<h3 id="org0a2cf87"><span class="section-number-3">1.17.</span> 2023-10-30 (任务)</h3>
+<div id="outline-container-orgeb32b7e" class="outline-3">
+<h3 id="orgeb32b7e"><span class="section-number-3">1.17.</span> 2023-10-30 (任务)</h3>
 <div class="outline-text-3" id="text-1-17">
 <p>
 创建类 Device，描述设备的基本信息并添加基本控制
@@ -1184,8 +1184,8 @@ Winform 项目，VS 界面:
 </div>
 </div>
 
-<div id="outline-container-orgf5f6210" class="outline-3">
-<h3 id="orgf5f6210"><span class="section-number-3">1.18.</span> 2023-09-07 (任务)</h3>
+<div id="outline-container-org7a31677" class="outline-3">
+<h3 id="org7a31677"><span class="section-number-3">1.18.</span> 2023-09-07 (任务)</h3>
 <div class="outline-text-3" id="text-1-18">
 <p>
 01-张三.txt, 创建源文件、编写代码、编译、运行
@@ -1194,10 +1194,10 @@ Winform 项目，VS 界面:
 </div>
 </section>
 
-<section id="outline-container-orga1a6079" class="outline-2">
-<h2 id="orga1a6079"><span class="section-number-2">2.</span> 任务结果</h2>
+<section id="outline-container-org86b49eb" class="outline-2">
+<h2 id="org86b49eb"><span class="section-number-2">2.</span> 任务结果</h2>
 <div class="outline-text-2" id="text-2">
-<table id="org9126b88">
+<table id="orgf7f997d">
 
 
 <colgroup>
@@ -1215,9 +1215,9 @@ Winform 项目，VS 界面:
 <tr>
 <th scope="col" class="org-right">G</th>
 <th scope="col" class="org-left">姓名</th>
-<th scope="col" class="org-right"><a href="#org4963414">2024-04-03</a></th>
-<th scope="col" class="org-right"><a href="#org4a83b52">2024-04-10</a></th>
-<th scope="col" class="org-right"><a href="#org74344e3">2024-04-15</a></th>
+<th scope="col" class="org-right"><a href="#orgdd8fe66">2024-04-03</a></th>
+<th scope="col" class="org-right"><a href="#org253369b">2024-04-10</a></th>
+<th scope="col" class="org-right"><a href="#org4ad04c4">2024-04-15</a></th>
 </tr>
 </thead>
 <tbody>
@@ -1620,7 +1620,7 @@ Winform 项目，VS 界面:
 
 
 <details><summary>history scores</summary>
-<table id="org3e80c74">
+<table id="orgbd21495">
 
 
 <colgroup>
@@ -1638,9 +1638,9 @@ Winform 项目，VS 界面:
 <tr>
 <th scope="col" class="org-right">G</th>
 <th scope="col" class="org-left">姓名</th>
-<th scope="col" class="org-right"><a href="#orgf5f6210">2023-09-07</a></th>
-<th scope="col" class="org-right"><a href="#org0a2cf87">2023-10-30</a></th>
-<th scope="col" class="org-right"><a href="#org9e9b6ae">2023-12-28</a></th>
+<th scope="col" class="org-right"><a href="#org7a31677">2023-09-07</a></th>
+<th scope="col" class="org-right"><a href="#orgeb32b7e">2023-10-30</a></th>
+<th scope="col" class="org-right"><a href="#org4df153d">2023-12-28</a></th>
 </tr>
 </thead>
 <tbody>
@@ -2043,7 +2043,7 @@ Winform 项目，VS 界面:
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 31415929</p>
-<p class="date">Created: 2024-04-22</p>
+<p class="date">Created: 2024-04-23</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
