best_try_and_best_chance

--- a/192/index.html
+++ b/192/index.html
@@ -949,7 +949,7 @@ C/S架构编程，做完第一章所有的上机题:
 <section id="outline-container-org366482f" class="outline-2">
 <h2 id="org366482f"><span class="section-number-2">2.</span> 任务结果</h2>
 <div class="outline-text-2" id="text-2">
-<table id="org6b72643">
+<table id="org5b4355c">
 
 
 <colgroup>
@@ -1022,6 +1022,38 @@ C/S架构编程，做完第一章所有的上机题:
 </tr>
 
 <tr>
+<td class="org-right">1</td>
+<td class="org-left">谭鑫</td>
+<td class="org-right">24</td>
+<td class="org-right">7</td>
+<td class="org-right">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-right">1</td>
+<td class="org-left">余海中</td>
+<td class="org-right">25</td>
+<td class="org-right">8</td>
+<td class="org-right">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-right">5</td>
+<td class="org-left">黄飞超</td>
+<td class="org-right">13</td>
+<td class="org-right">9</td>
+<td class="org-right">7</td>
+</tr>
+
+<tr>
+<td class="org-right">2</td>
+<td class="org-left">李耀武</td>
+<td class="org-right">12</td>
+<td class="org-right">10</td>
+<td class="org-right">&#xa0;</td>
+</tr>
+
+<tr>
 <td class="org-right">5</td>
 <td class="org-left">韦金良</td>
 <td class="org-right">4</td>
@@ -1057,22 +1089,6 @@ C/S架构编程，做完第一章所有的上机题:
 <td class="org-right">3</td>
 <td class="org-left">李泽俊</td>
 <td class="org-right">11</td>
-<td class="org-right">&#xa0;</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">2</td>
-<td class="org-left">李耀武</td>
-<td class="org-right">12</td>
-<td class="org-right">&#xa0;</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">5</td>
-<td class="org-left">黄飞超</td>
-<td class="org-right">13</td>
 <td class="org-right">&#xa0;</td>
 <td class="org-right">&#xa0;</td>
 </tr>
@@ -1153,22 +1169,6 @@ C/S架构编程，做完第一章所有的上机题:
 <td class="org-right">3</td>
 <td class="org-left">薛进超</td>
 <td class="org-right">23</td>
-<td class="org-right">&#xa0;</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">1</td>
-<td class="org-left">谭鑫</td>
-<td class="org-right">24</td>
-<td class="org-right">&#xa0;</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">1</td>
-<td class="org-left">余海中</td>
-<td class="org-right">25</td>
 <td class="org-right">&#xa0;</td>
 <td class="org-right">&#xa0;</td>
 </tr>
@@ -1314,7 +1314,7 @@ C/S架构编程，做完第一章所有的上机题:
 
 <details><summary>history score</summary>
 
-<table id="org5b4355c">
+<table id="org77d3355">
 
 
 <colgroup>
