best_try_and_best_chance

--- a/192/index.html
+++ b/192/index.html
@@ -949,7 +949,7 @@ C/S架构编程，做完第一章所有的上机题:
 <section id="outline-container-org366482f" class="outline-2">
 <h2 id="org366482f"><span class="section-number-2">2.</span> 任务结果</h2>
 <div class="outline-text-2" id="text-2">
-<table id="org5b4355c">
+<table id="org77d3355">
 
 
 <colgroup>
@@ -1026,7 +1026,7 @@ C/S架构编程，做完第一章所有的上机题:
 <td class="org-left">谭鑫</td>
 <td class="org-right">24</td>
 <td class="org-right">7</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">11</td>
 </tr>
 
 <tr>
@@ -1034,7 +1034,7 @@ C/S架构编程，做完第一章所有的上机题:
 <td class="org-left">余海中</td>
 <td class="org-right">25</td>
 <td class="org-right">8</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">13</td>
 </tr>
 
 <tr>
@@ -1055,41 +1055,9 @@ C/S架构编程，做完第一章所有的上机题:
 
 <tr>
 <td class="org-right">5</td>
-<td class="org-left">韦金良</td>
-<td class="org-right">4</td>
-<td class="org-right">&#xa0;</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">5</td>
 <td class="org-left">肖义珥</td>
 <td class="org-right">5</td>
-<td class="org-right">&#xa0;</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">3</td>
-<td class="org-left">刘广鸿</td>
-<td class="org-right">7</td>
-<td class="org-right">&#xa0;</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">4</td>
-<td class="org-left">贝俊霖</td>
-<td class="org-right">9</td>
-<td class="org-right">&#xa0;</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">3</td>
-<td class="org-left">李泽俊</td>
 <td class="org-right">11</td>
-<td class="org-right">&#xa0;</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
@@ -1097,47 +1065,7 @@ C/S架构编程，做完第一章所有的上机题:
 <td class="org-right">5</td>
 <td class="org-left">古远东</td>
 <td class="org-right">14</td>
-<td class="org-right">&#xa0;</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">3</td>
-<td class="org-left">唐景富</td>
-<td class="org-right">15</td>
-<td class="org-right">&#xa0;</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">5</td>
-<td class="org-left">郭榕荣</td>
-<td class="org-right">16</td>
-<td class="org-right">&#xa0;</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">3</td>
-<td class="org-left">陈颖聪</td>
-<td class="org-right">17</td>
-<td class="org-right">&#xa0;</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">6</td>
-<td class="org-left">段京文</td>
-<td class="org-right">18</td>
-<td class="org-right">&#xa0;</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">1</td>
-<td class="org-left">陆宇轩</td>
-<td class="org-right">19</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">12</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
@@ -1145,7 +1073,63 @@ C/S架构编程，做完第一章所有的上机题:
 <td class="org-right">2</td>
 <td class="org-left">刘虹佑</td>
 <td class="org-right">20</td>
+<td class="org-right">13</td>
 <td class="org-right">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-right">1</td>
+<td class="org-left">陆宇轩</td>
+<td class="org-right">19</td>
+<td class="org-right">14</td>
+<td class="org-right">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-right">6</td>
+<td class="org-left">张桂毓</td>
+<td class="org-right">33</td>
+<td class="org-right">15</td>
+<td class="org-right">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-right">6</td>
+<td class="org-left">刘泽泉</td>
+<td class="org-right">34</td>
+<td class="org-right">16</td>
+<td class="org-right">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-right">6</td>
+<td class="org-left">周永久</td>
+<td class="org-right">36</td>
+<td class="org-right">17</td>
+<td class="org-right">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-right">1</td>
+<td class="org-left">刘翔</td>
+<td class="org-right">38</td>
+<td class="org-right">18</td>
+<td class="org-right">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-right">4</td>
+<td class="org-left">贝俊霖</td>
+<td class="org-right">9</td>
+<td class="org-right">19</td>
+<td class="org-right">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-right">4</td>
+<td class="org-left">卢德涛</td>
+<td class="org-right">31</td>
+<td class="org-right">20</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
@@ -1153,6 +1137,118 @@ C/S架构编程，做完第一章所有的上机题:
 <td class="org-right">3</td>
 <td class="org-left">段文锋</td>
 <td class="org-right">21</td>
+<td class="org-right">21</td>
+<td class="org-right">10</td>
+</tr>
+
+<tr>
+<td class="org-right">4</td>
+<td class="org-left">叶宇</td>
+<td class="org-right">30</td>
+<td class="org-right">22</td>
+<td class="org-right">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-right">4</td>
+<td class="org-left">陈梓鑫</td>
+<td class="org-right">29</td>
+<td class="org-right">23</td>
+<td class="org-right">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-right">3</td>
+<td class="org-left">刘广鸿</td>
+<td class="org-right">7</td>
+<td class="org-right">24</td>
+<td class="org-right">15</td>
+</tr>
+
+<tr>
+<td class="org-right">3</td>
+<td class="org-left">李泽俊</td>
+<td class="org-right">11</td>
+<td class="org-right">25</td>
+<td class="org-right">12</td>
+</tr>
+
+<tr>
+<td class="org-right">3</td>
+<td class="org-left">唐景富</td>
+<td class="org-right">15</td>
+<td class="org-right">26</td>
+<td class="org-right">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-right">6</td>
+<td class="org-left">段京文</td>
+<td class="org-right">18</td>
+<td class="org-right">27</td>
+<td class="org-right">15</td>
+</tr>
+
+<tr>
+<td class="org-right">3</td>
+<td class="org-left">张甘霖</td>
+<td class="org-right">28</td>
+<td class="org-right">28</td>
+<td class="org-right">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-right">1</td>
+<td class="org-left">沈艺宏</td>
+<td class="org-right">39</td>
+<td class="org-right">29</td>
+<td class="org-right">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-right">1</td>
+<td class="org-left">苏大明</td>
+<td class="org-right">41</td>
+<td class="org-right">30</td>
+<td class="org-right">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-right">5</td>
+<td class="org-left">郭榕荣</td>
+<td class="org-right">16</td>
+<td class="org-right">31</td>
+<td class="org-right">14</td>
+</tr>
+
+<tr>
+<td class="org-right">3</td>
+<td class="org-left">薛进超</td>
+<td class="org-right">23</td>
+<td class="org-right">32</td>
+<td class="org-right">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-right">3</td>
+<td class="org-left">陈颖聪</td>
+<td class="org-right">17</td>
+<td class="org-right">33</td>
+<td class="org-right">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-right">3</td>
+<td class="org-left">饶展源</td>
+<td class="org-right">32</td>
+<td class="org-right">&#xa0;</td>
+<td class="org-right">9</td>
+</tr>
+
+<tr>
+<td class="org-right">5</td>
+<td class="org-left">韦金良</td>
+<td class="org-right">4</td>
 <td class="org-right">&#xa0;</td>
 <td class="org-right">&#xa0;</td>
 </tr>
@@ -1161,14 +1257,6 @@ C/S架构编程，做完第一章所有的上机题:
 <td class="org-right">2</td>
 <td class="org-left">岑法政</td>
 <td class="org-right">22</td>
-<td class="org-right">&#xa0;</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">3</td>
-<td class="org-left">薛进超</td>
-<td class="org-right">23</td>
 <td class="org-right">&#xa0;</td>
 <td class="org-right">&#xa0;</td>
 </tr>
@@ -1190,73 +1278,9 @@ C/S架构编程，做完第一章所有的上机题:
 </tr>
 
 <tr>
-<td class="org-right">3</td>
-<td class="org-left">张甘霖</td>
-<td class="org-right">28</td>
-<td class="org-right">&#xa0;</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">4</td>
-<td class="org-left">陈梓鑫</td>
-<td class="org-right">29</td>
-<td class="org-right">&#xa0;</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">4</td>
-<td class="org-left">叶宇</td>
-<td class="org-right">30</td>
-<td class="org-right">&#xa0;</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">4</td>
-<td class="org-left">卢德涛</td>
-<td class="org-right">31</td>
-<td class="org-right">&#xa0;</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">3</td>
-<td class="org-left">饶展源</td>
-<td class="org-right">32</td>
-<td class="org-right">&#xa0;</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">6</td>
-<td class="org-left">张桂毓</td>
-<td class="org-right">33</td>
-<td class="org-right">&#xa0;</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">6</td>
-<td class="org-left">刘泽泉</td>
-<td class="org-right">34</td>
-<td class="org-right">&#xa0;</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
 <td class="org-right">1</td>
 <td class="org-left">李岳元</td>
 <td class="org-right">35</td>
-<td class="org-right">&#xa0;</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">6</td>
-<td class="org-left">周永久</td>
-<td class="org-right">36</td>
 <td class="org-right">&#xa0;</td>
 <td class="org-right">&#xa0;</td>
 </tr>
@@ -1270,35 +1294,11 @@ C/S架构编程，做完第一章所有的上机题:
 </tr>
 
 <tr>
-<td class="org-right">1</td>
-<td class="org-left">刘翔</td>
-<td class="org-right">38</td>
-<td class="org-right">&#xa0;</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">1</td>
-<td class="org-left">沈艺宏</td>
-<td class="org-right">39</td>
-<td class="org-right">&#xa0;</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
 <td class="org-right">4</td>
 <td class="org-left">王海波</td>
 <td class="org-right">40</td>
 <td class="org-right">&#xa0;</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">1</td>
-<td class="org-left">苏大明</td>
-<td class="org-right">41</td>
-<td class="org-right">&#xa0;</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">8</td>
 </tr>
 
 <tr>
@@ -1314,7 +1314,7 @@ C/S架构编程，做完第一章所有的上机题:
 
 <details><summary>history score</summary>
 
-<table id="org77d3355">
+<table id="org39aecac">
 
 
 <colgroup>
